remove older example folder and create json

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="3" class="gallery">
       <h1>Gallery</h1>
       <p><strong>Inline-Editor</strong> by <strong>raphamorim</strong></p>
-      <p><iframe src="gallery/inline-editor/" class="gallery-view" scrolling="no" frameborder="0"></iframe></p>
+      <p><iframe src="assets/example/inline-editor/" class="gallery-view" scrolling="no" frameborder="0"></iframe></p>
       <p><a href="#3" class="btn-load-more">See all gallery</a></p>
         <!-- full screen and see project  -->
   </section>
