make the contribute guide

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
       <h1>Contributting</h1>
       <p><h2>Submit your own example</h2></p>
       <p>You've created or got a great idea for a custom angularjs app? Awesome!</p>
-      <p>When you're ready to go, just fork this project and put your app in gallery folder, after this send us a pull request. The app will appear on this site for others to play and use!</p>
+      <p>When you're ready to go, follow this instructions:</p>
+      <p><hr></p>
+      <p> <strong>1 - Pick a Name:</strong><br> Don‘t use a name too similar to another and use CamelCase or underscore_notation</p>
+      <p> <strong>2 - Decide how to Host:</strong><br> The app link. You can use the GitHub Pages for this.</p>
+      <p> <strong>3 - Moment of Truth</strong><br> Be happy and send a pull request :)</p>
+      <p><hr></p>
       <p></p>
       <p><a class="btn-github" href="https://github.com/raphamorim/angularjs.gallery">
           <img src="http://www.astropy.org/images/github-mark.png">Fork this Project!</a></p>
