need more projects

--- a/index.html
+++ b/index.html
@@ -56,12 +56,19 @@
   <section id="3" class="gallery">
       <h1>Gallery</h1>
       <p><strong>Inline-Editor</strong> by <strong>raphamorim</strong></p>
-      <p><iframe src="assets/example/inline-editor/" class="gallery-view" scrolling="no" frameborder="0"></iframe></p>
+      <p><iframe src="http://raphamorim.com/angularjs.gallery/assets/example/inline-editor/" class="gallery-view" scrolling="no" frameborder="0"></iframe></p>
       <p><a href="#3" class="btn-load-more">See all gallery</a></p>
         <!-- full screen and see project  -->
   </section>
-  <section id="4"><h1>More Useful</h1></section>
-  <section id="5"><h1>Newest</h1></section>
+
+  <section id="4">
+      <h1>More Useful</h1>
+      <p>. . .</p>
+  </section>
+  <section id="5">
+      <h1>Newest</h1>
+      <p>. . .</p>
+  </section>
 </div>
 
 <footer>
