fix the guide :)

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   <section id="2">
       <h1>Contributting</h1>
       <p><h2>Submit your own example</h2></p>
-      <p>You've created or got a great idea for a custom angularjs app? Awesome!</p>
-      <p>When you're ready to go, follow this instructions:</p>
+      <p>You've created a custom angularjs app? Awesome! Just follow this steps to include your app in this project:</p>
       <p><hr></p>
-      <p> <strong>1 - Pick a Name:</strong><br> Don‘t use a name too similar to another and use CamelCase or underscore_notation</p>
-      <p> <strong>2 - Decide how to Host:</strong><br> The app link. You can use the GitHub Pages for this.</p>
-      <p> <strong>3 - Moment of Truth</strong><br> Be happy and send a pull request :)</p>
+      <p> <strong>1 - Fork the Project:</strong><br> Add your project in gallery.json, following the existing model.</p>
+      <p> <strong>2 - Pick a Name:</strong><br> Don‘t use a name too similar to another.</p>
+      <p> <strong>3 - Decide how to Host:</strong><br> The app link. You can use the GitHub Pages for this.</p>
+      <p> <strong>4 - Moment of Truth</strong><br> Be happy and send a pull request :)</p>
       <p><hr></p>
       <p></p>
       <p><a class="btn-github" href="https://github.com/raphamorim/angularjs.gallery">
