--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
 <footer>
     <a href="https://github.com/raphamorim/angularjs.gallery">AngularJs.gallery</a> has been made with <span class='love'>♥</span> by
-    <a href='http://github.com/raphamorim' target="_blank" />Raphamorim</a> and awesome
-    <a href="https://github.com/raphamorim/angularjs.gallery/contributors">contributors</a>!
+    <a href='http://github.com/raphamorim'>Raphael Amorim</a>
 </footer>
 
 <!-- jQuery -->
