--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <nav>
   <ul>
     <li><a href="#1">About</a></li>
-    <li><a href="#2">Contributting</a></li>
+    <li><a href="#2">Contributing</a></li>
     <li><a href="#3">Gallery</a></li>
     <li><a href="#4">More Useful</a></li>
     <li><a href="#5">Newest</a></li>
@@ -39,7 +39,7 @@
   </section>
 
   <section id="2">
-      <h1>Contributting</h1>
+      <h1>Contributing</h1>
       <p><h2>Submit your own example</h2></p>
       <p>You've created a custom angularjs app? Awesome! Just follow this steps to include your app in this project:</p>
       <p><hr></p>
