--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p> <strong>4 - Moment of Truth</strong><br> Be happy and send a pull request :)</p>
       <p><hr></p>
       <p></p>
-      <p><a class="btn-github" href="https://github.com/raphamorim/angularjs.gallery">
+      <p><a class="btn-github" href="https://github.com/raphamorim/angular.gallery">
           <img src="http://www.astropy.org/images/github-mark.png">Fork this Project!</a></p>
   </section>
 
@@ -72,7 +72,7 @@
 </div>
 
 <footer>
-    <a href="https://github.com/raphamorim/angularjs.gallery">AngularJs.gallery</a> has been made with <span class='love'>♥</span> by
+    <a href="https://github.com/raphamorim/angular.gallery">AngularJs.gallery</a> has been made with <span class='love'>♥</span> by
     <a href='http://github.com/raphamorim'>Raphael Amorim</a>
 </footer>
 
