add new example

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
   </section>
   <section id="5">
       <h1>Newest</h1>
-      <p>. . .</p>
+      <p>
+        <div class="list-item">Inline Editor</div>
+      </p>
   </section>
 </div>
 
